2006-07-25  David Kastrup  <dak@gnu.org>

	* latex.el (LaTeX-insert-environment): Leave mark at start of
	content when inserting around active region.

2006-07-11  David Kastrup  <dak@gnu.org>

	* latex.el (LaTeX-font-list): Add `\mathbb' on C-c C-f C-s.

2006-07-25  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-script): Don't match groups
	spanning more than one line in order to avoid visually wrong
	indentation in subsequent lines.
	(font-latex-match-quotation): Do not match escaped quotation
	marks.

2006-07-23  Ralf Angeli  <angeli@caeruleus.net>

	* bib-cite.el, tex-mik.el, doc/changes.texi, doc/history.texi,
	doc/wininstall.texi: Fix spelling of MiKTeX.

2006-07-21  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-script): Fix last check-in.

2006-07-18  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-script): Apply subscript and
	superscript highlighting only once in order to prevent the font
	size becoming too small.

2006-07-15  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-maybe-install-toolbar): Enable tool bar in LaTeX
	mode only.
	(LaTeX-maybe-install-toolbar): Revert last change.
	(TeX-latex-mode): Set `tool-bar-mode-on-hook' buffer-locally
	instead.

2006-07-12  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-fill-move-to-break-point): Fix regexp for
	matching whitespace and comment characters at the start of a line.
	Simplify forward search.

2006-07-11  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-find-macro-boundaries, TeX-find-macro-start): Remove
	unused argument.
	(TeX-find-macro-end-helper): Handle macros at the end of the
	buffer correctly.

2006-07-10  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-math-close-double-dollar): New variable.
	(TeX-insert-dollar): Use it.

	* Makefile.in, doc/Makefile.in (datarootdir): New variable used by
	autoconf 2.59e.

2006-07-09  Ralf Angeli  <angeli@caeruleus.net>
