@@ -1,5 +1,8 @@
 2006-07-25  David Kastrup  <dak@gnu.org>
 
+	* style/doc.el ("doc"): Add macrocode and macrocode* to
+	indentation-neutral environment list.
+
 	* latex.el (LaTeX-insert-environment): Leave mark at start of
 	content when inserting around active region.
 
